# Communication

./: .gitignore  CMakeLists.txt  README.md  client.c  message.h  server  server.c  test.cpp
connect-to-module/: main.cpp
include/: Check.h  CommunicationModule.hpp  Custom.h  GCData.h  GCStates.h  Message.h  Message.hpp  Server.h  communication.hpp  message.hpp  queue_config.h  server.h
module/: CMakeLists.txt  Communication.cpp  Communication.h  main.cpp  udp.cpp  udp.hpp
module/.qi/: path.conf
module/build-mytoolchain/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
moduleCommunication/.qi/: path.conf
moduleCommunication/build-desktop/: CMakeCache.txt  Makefile  cmake_install.cmake
module_works/: CMakeLists.txt  communication.hpp  main.cpp  mymodule.cpp  mymodule.h
module_works/build-communication/: CMakeCache.txt  Makefile  cmake_install.cmake
module_works/build-communication/sdk/share/qi/: path.conf
module_works/build-desktop/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
module_works/build-desktop/sdk/share/qi/: path.conf
module_works/include/: communication.hpp  data.h  server.h
module_works/server/include/: message.h
module_works/server/src/: server.cpp
module_works/src/: communication.cpp  main.cpp  message.cpp  server.cpp
server/: Makefile
server/include/: .message.h.swp  .server.h.swp  message.h  server.h  udp_config.h
server/src/: .server.cpp.swp  main.cpp  server.cpp
src/: CommunicationModule.cpp  Custom.cpp  Message.cpp  Server.cpp  communication.cpp  main.cpp  message.cpp
